
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int serial_send (int ) ;

void rn42_puts(char *s)
{
    while (*s)
 serial_send(*s++);
}
